[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/HackingGames/cannonGameBG.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/HackingGames/largeCircle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/HackingGames/smallCircle.png" type="Texture" id=3]
[ext_resource path="res://Assets/ObjectScenes/HackingGames/CircleMatching/CircleMatch.gd" type="Script" id=4]

[node name="Game" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBox" type="NinePatchRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_lock_": true
}

[node name="LargeCircle" type="Sprite" parent="GameBox"]
position = Vector2( 160, 168 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="SmallCircle" type="Sprite" parent="GameBox"]
position = Vector2( 72, 96 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
